# qtadqscope

./: .clang-format  .gitignore  ADQAPI.h  ADQAPIIncluder.h  ADQDeviceConfiguration.cpp  ADQDeviceConfiguration.h  ADQInterfaceWrappers.cpp  ADQInterfaceWrappers.h  Acquisition.cpp  Acquisition.h  AcquisitionChannelSettingsTab.cpp  AcquisitionChannelSettingsTab.h  AcquisitionChannelSettingsTab.ui  AcquisitionConfiguration.cpp  AcquisitionConfiguration.h  AcquisitionHandler.h  AcquisitionSettings.cpp  AcquisitionSettings.h  AcquisitionSettings.ui  AcquisitionSettingsSidePanel.cpp  AcquisitionSettingsSidePanel.h  AcquisitionSettingsSidePanel.ui  AcquisitionSettings_incl.ui  AcquisitionStateChangeListener.h  AcquisitionThreads.cpp  AcquisitionThreads.h  Application.cpp  Application.h  ApplicationConfiguration.cpp  ApplicationConfiguration.h  ApplicationContext.cpp  ApplicationContext.h  AutoCalibrateDialog.cpp  AutoCalibrateDialog.h  AutoCalibrateDialog.ui  AuxTriggerDialog.cpp  AuxTriggerDialog.h  AuxTriggerDialog.ui  BinaryFileWriter.cpp  BinaryFileWriter.h  (+107 more)
doc/: defs.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
include/fastsave/: CMakeLists.txt  application.cpp  application.hpp  application_settings.cpp  application_settings.hpp  buffer_processor.cpp  buffer_processor.hpp  hdf5_write.cpp  hdf5_write.hpp  main.cpp  mockapi.hpp  record_processor.hpp  semaphore.hpp  streaming.cpp  streaming.hpp  streaming_headers.cpp  streaming_headers.hpp  util.cpp  util.hpp
lib/qcustomplot/: CMakeLists.txt
tests/: ConfigurationTest.h
tools/: .gitignore  bld.sh  build_mock_data.py  min.supp  mockapi_parse.py  questions.txt  verbose_parse.cpp  verbose_parse.py
tools/binaryparser/: __main__.py  parsers.py  record_sinks.py  structures.py  verbose_parse.py
tools/multibinaryparser/: __main__.py  parsers.py  record_sinks.py
